// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`husky hg should not matter where the user defined hooks are 1`] = `
"[ui]
username=husky
[hooks]
precommit=.hg/hooks/husky
#husky-hg:begin
changegroup=.hg/hooks/changegroup
incoming=.hg/hooks/incoming
outgoing=.hg/hooks/outgoing
pre-push=.hg/hooks/pre-push
prechangegroup=.hg/hooks/prechangegroup
prelistkeys=.hg/hooks/prelistkeys
preoutgoing=.hg/hooks/preoutgoing
pretag=.hg/hooks/pretag
pretxnopen=.hg/hooks/pretxnopen
pretxnclose=.hg/hooks/pretxnclose
txnabort=.hg/hooks/txnabort
pretxnchangegroup=.hg/hooks/pretxnchangegroup
pretxncommit=.hg/hooks/pretxncommit
preupdate=.hg/hooks/preupdate
pushkey=.hg/hooks/pushkey
#husky-hg:end
[extensions]"
`;

exports[`husky hg should not modify user hooks 1`] = `
"[ui]
username=husky
[hooks]
precommit=.hg/hooks/husky
#husky-hg:begin
changegroup=.hg/hooks/changegroup
incoming=.hg/hooks/incoming
outgoing=.hg/hooks/outgoing
pre-push=.hg/hooks/pre-push
prechangegroup=.hg/hooks/prechangegroup
prelistkeys=.hg/hooks/prelistkeys
preoutgoing=.hg/hooks/preoutgoing
pretag=.hg/hooks/pretag
pretxnopen=.hg/hooks/pretxnopen
pretxnclose=.hg/hooks/pretxnclose
txnabort=.hg/hooks/txnabort
pretxnchangegroup=.hg/hooks/pretxnchangegroup
pretxncommit=.hg/hooks/pretxncommit
preupdate=.hg/hooks/preupdate
pushkey=.hg/hooks/pushkey
#husky-hg:end"
`;

exports[`husky hg should remove the husky section on uninstall 1`] = `
"[ui]
username=husky
[hooks]
precommit=.hg/hooks/husky
"
`;
